docs: fix announcement bar on mobile

--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -62,6 +62,7 @@ html[data-theme='dark'] .header-github-link:before {
 div[role="banner"] {
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 html[data-theme='light'] div[role="banner"] {
